@@ -78,7 +78,10 @@ class CLocalApiClientTest extends PHPUnit_Framework_TestCase {
 	 */
 	public function testCallIncorrect($api, $method, $params, $auth, $expectedErrorCode, $expectedErrorMessage) {
 		// setup a mock user API to authenticate the user
-		$userMock = $this->getMock('CUser', ['checkAuthentication']);
+		$userMock = $this->getMockBuilder('CUser')
+			->setMethods(['checkAuthentication'])
+			->getMock();
+
 		$userMock->expects($this->any())->method('checkAuthentication')->will($this->returnValue([
 			'debug_mode' => false
 		]));
